# ill_mirror-takin2-core

./: .gitignore  CMakeLists.txt  FindClipper.cmake  FindDl.cmake  FindJulia.cmake  FindQwt.cmake  FindRtMp.cmake  INSTALL  LICENSES  LICENSES.txt  README.md  REPOSITORIES  build.sh  clean.sh  prebuild.sh  setup_externals.sh  takin.sh  themakefile
dialogs/: AboutDlg.cpp  AtomsDlg.cpp  DWDlg.cpp  DeadAnglesDlg.cpp  DeadAnglesDlg.h  DynPlaneDlg.cpp  EllipseDlg.cpp  EllipseDlg3D.cpp  FavDlg.cpp  FilePreviewDlg.cpp  GotoDlg.cpp  LogDlg.cpp  NetCacheDlg.cpp  NeutronDlg.cpp  NeutronDlg.h  PowderDlg.cpp  RealParamDlg.cpp  RecipParamDlg.cpp  SettingsDlg.cpp  SpurionDlg.cpp  TOFDlg.cpp
doc/: basics.html  build.html  convo.html  fit.html  reso-sqw-jl.html  reso-sqw-native.html  reso-sqw-py.html  reso-sqw.html  reso.html  setup.html  takin.html  takin_info.txt  toc.html  tutorials.html
examples/sqw_grid/: convert_grid_ver1_to_2.cpp  grid.cpp  grid_ver1_tst.py  grid_ver2.cpp  grid_ver2_tst.py
examples/sqw_jl/: sqw.jl
examples/sqw_module/: grid_tst.py  sqwmod.h
examples/sqw_py/: sqw_magnon.py  sqw_phonon.py
libcrystal/: CMakeLists.txt  LICENSES  version.cpp  version.h
libcrystal/libs/: xtl_xml.h
libcrystal/libs/spacegroups/: latticehelper.h
libcrystal/tools/ffact/: FormfactorDlg.cpp
libcrystal/tools/gentab/: gentab.cpp
libcrystal/tools/sglist/: SgListDlg.cpp
libs/: globals.cpp  globals.h  plotgl.cpp  plotgl.h  plotgl2.cpp  plotgl_iface.h  version.h
libs/qt/: qwthelper.cpp  qwthelper.h  recent.h
libs/spacegroups/: spacegroup.h
libs/xtal/: libxtl.cpp
qthelpers/: .gitignore  LICENSES
qthelpers/src/: qwthelper.cpp  qwthelper.h
setup/: clean.sh  get_3rdparty_licenses.sh  prebuild.sh  setup_externals.sh  setup_internals.sh
setup_lin/: buildenv_focal.sh  buildenv_jammy.sh  cp_deb.sh  cp_takin.sh  mkdeb_bionic.sh  mkdeb_bullseye.sh  mkdeb_deb10.sh  mkdeb_focal.sh  mkdeb_jammy.sh
setup_mac/: Entitlements.plist  Info.plist  InfoBundle.plist  InfoModPy.plist  clean_py.sh  cp_app.sh  cp_dmg.sh  cp_frameworks.sh  find_local_bindings.sh  fix_names.sh  mk_icon.sh  use_syspy.sh
setup_mingw/: cp_mingw_takin.sh
tools/convofit/: convofit.cpp  convofit.h  convofit_cli.cpp  convofit_import.cpp  convofit_main.cpp  model.cpp  model.h  scan.cpp  scan.h
tools/ffact/: FormfactorDlg.cpp
tools/gentab/: gentab.cpp
tools/misc/: loc.gpl  nxsprint.py  tof.cpp
tools/monteconvo/: ConvoDlg.cpp  ConvoDlg.h  ConvoDlg_file.cpp  ConvoDlg_fit.cpp  ConvoDlg_sim.cpp  SqwParamDlg.cpp  SqwParamDlg.h  TASReso.cpp  TASReso.h  monteconvo.h  monteconvo_cli.cpp  monteconvo_common.cpp  monteconvo_common.h  monteconvo_main.cpp  sqw.cpp  sqw.h  sqw_grid_ver2.cpp  sqw_grid_ver2.h  sqw_jl.cpp  sqw_jl.h  sqw_proc.h  sqw_proc_impl.h  sqw_py.cpp  sqw_py.h  sqw_uniform_grid.cpp  sqw_uniform_grid.h  sqwbase.cpp  sqwbase.h  sqwfactory.cpp  sqwnull.h  sqwrawdelegate.h
tools/monteconvo/script_modules/: sqw_jl.cpp  sqw_py.cpp
tools/montereso/: res.cpp  res.h  res_main.cpp
tools/posextract/: posextract.cpp
tools/powderfit/: PowderFitDlg.cpp
tools/res/: ResoDlg.cpp  ResoDlg.h  ResoDlg_file.cpp  cn.cpp  cn.h  defs.h  eck.cpp  eck.h  eck.py  ellipse.h  helper.h  mc.h  pop.cpp  pop.h  pop_cn.cpp  r0.cpp  r0.h  viol.cpp  viol.h
tools/res_py/: eck.py  helpers.py  pop.py  reso.py  test.py
tools/scanpos/: ScanPosDlg.cpp  scanpos.h
tools/scanviewer/: exporters.h  scanviewer.cpp  scanviewer.h
tools/sglist/: SgListDlg.cpp
tools/taz/: bz3d.cpp  bz3d.h  nicos.cpp  proj_lattice.cpp  real3d.cpp  real3d.h  real_lattice.cpp  recip3d.cpp  scattering_triangle.cpp  scattering_triangle.h  sics.cpp  tas_layout.cpp  tasoptions.h  taz.cpp  taz.h  taz_crys.cpp  taz_export.cpp  taz_file.cpp  taz_main.cpp  tof_layout.cpp
tools/test/: subscans.py  tst_hdf.cpp  tst_tof.cpp
ui/: about.ui  monteconvo.ui  reso.ui  scanpos.ui  scanviewer.ui  settings.ui  sqwparams.ui
